--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mysten/dapp-kit": "^0.14.44",
-    "@mysten/sui": "^1.18.0",
+    "@mysten/dapp-kit": "^0.14.30",
+    "@mysten/sui": "^1.20.0",
     "@tanstack/react-query": "^5.62.11",
+    "axios": "^1.7.9",
+    "jotai": "^2.11.1",
     "next": "15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
