--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mysten/dapp-kit": "^0.14.30",
+    "@mysten/enoki": "^0.4.22",
     "@mysten/sui": "^1.20.0",
     "@tanstack/react-query": "^5.62.11",
     "axios": "^1.7.9",
